# PhD-Code

./: .gitignore  README.md  computing-morse.ipynb  persistent-homology.ipynb  pyproject.toml  test-notebook.ipynb
gap_scripts/: tietze.g
notebooks/: computing_morse.ipynb  manual_persistant_fundametal_group.ipynb  test_guhdi.ipynb  test_notebook.ipynb  test_ripster.ipynb
src/: __init__.py  my_algorithms.py
