# Python configuration file.
# To reinsstiall or update run: 'pip install -e .'

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-phd-code"
version = "0.1.0"
description = "My research code"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["src"]
